--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
+title: Sitio web de ErnestoServices
 description: A blog about lorem ipsum dolor sit amet
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
@@ -7,11 +7,11 @@ description: A blog about lorem ipsum dolor sit amet
 # User settings
 username: Ernesto Services
 user_description: Servicio de reparacion de maquinarias CATERPILLAR al igual que importacion de los  mismo
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+user_title: 
+email: info@ernestoservices.parts
+# twitter_username: lorem_ipsum
+# github_username:  lorem_ipsum
+# gplus_username:  lorem_ipsum
 
 # Google-analytics
 google-analytics:
