--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Sitio web de ErnestoServices
-description: A blog about lorem ipsum dolor sit amet
+description: Ofrecemos diferentes servicios en cuanto a maquinaria pesada se refiere, contactenos para mas informacion.
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
